[gd_scene load_steps=2 format=3 uid="uid://cxesgcmoeaxwj"]

[ext_resource type="Script" path="res://examples/2d/example_2d.gd" id="1_ogsnh"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ogsnh")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="click" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Global 1
"

[node name="hurt" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Global 2"

[node name="sparkle" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Global 3"

[node name="stop1" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Stop 1"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "2D: Play"

[node name="ColorRect" type="ColorRect" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="Listener" type="ColorRect" parent="CenterContainer/HBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.475
anchor_top = 0.475
anchor_right = 0.525
anchor_bottom = 0.525
offset_top = 0.0249977
offset_bottom = -0.0250053
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(2.5, 2.5)
color = Color(0, 0, 0, 1)

[node name="AudioListener2D" type="AudioListener2D" parent="CenterContainer/HBoxContainer/ColorRect/Listener"]

[node name="Node2D" type="Node2D" parent="CenterContainer/HBoxContainer/ColorRect/Listener"]

[node name="Rotator" type="ColorRect" parent="CenterContainer/HBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.5
offset_right = 5.0
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(5, 5)
color = Color(1, 0, 0, 1)

[node name="Node2D" type="Node2D" parent="CenterContainer/HBoxContainer/ColorRect/Rotator"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="button_up" from="CenterContainer/HBoxContainer/VBoxContainer2/click" to="." method="_on_click_button_up"]
[connection signal="button_up" from="CenterContainer/HBoxContainer/VBoxContainer2/hurt" to="." method="_on_hurt_button_up"]
[connection signal="button_up" from="CenterContainer/HBoxContainer/VBoxContainer2/sparkle" to="." method="_on_sparkle_button_up"]
[connection signal="button_up" from="CenterContainer/HBoxContainer/VBoxContainer2/stop1" to="." method="_on_stop_1_button_up"]
[connection signal="button_up" from="CenterContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_play_button_up"]
